Fix pagination: set height so there is no scrollbar.

--- a/sass/_screen.sass
+++ b/sass/_screen.sass
@@ -155,6 +155,7 @@ th
 
 .pagination
   +trailer(1)
+  height: 1.5em
   overflow: auto
 
 .pagination-newer
